2007-04-06  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-compat.el: removed predictive-prog-mode declaration

	* rails-features.el: created

	* rails-predictive-prog-mode-feature.el: created and place into it
	predictive-program-mode

	* rails-snippets-feature.el: created

	* rails-ui.el (rails-minor-mode-map): removed snippets menu

	* rails-untabify-feature.el: created and place into it untabify
	hook

	* rails.el (find-file-hooks): cleanup

2007-04-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el (auto-mode-alist): added Rakefile to auto-mode-alist

	* rails-ui.el (rails-minor-mode-test-current-method-key): created

	* rails-*-test-minor-mode (rails-unit-test-minor-mode rails-functional-test-minor-mode): 
	changed hotkey "C-c ." to "C-c C-c ,", the old conflicted with ECB

	* rails-ruby.el (flymake-ruby-load): apply flymake-mode only if
	buffer-file-name matched flymake-allowed-file-name-masks

2007-04-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-ui.el: reduced the menu length

2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-controller-layout.el (rails-controller-layout:keymap):
	created menu group for current minor-mode

	* rails-model-layout.el (rails-model-layout:keymap): created menu
	group for current minor-mode

	* rails-core.el (rails-core:controller-file-by-model)
	(rails-core:mailer-file, rails-core:mailer-exist-p)
	(rails-core:migration-file-by-model)
	(rails-core:model-by-migration-filename)
	(rails-core:unit-test-exist-p, rails-core:fixture-exist-p)
	(rails-core:current-mailer): created

	* rails-model-layout.el (rails-model-layout:keymap): removed mode specific menu

	* rails-controller-layout.el (rails-controller-layout:keymap): removed mode specific menu

	* rails-compat.el (predictive-prog-mode): don't start inside strings

	* rails-core.el: using completion-posn-at-point-as-event instead custom function
